move signin button

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
                 <p id="userId" class="navbar-text navbar-right"></p>
             </div>
 
-                        
-            <div id="signin" class="g-signin2" data-onsuccess="onSignIn"></div>
-            <a id="signout" href="#" onclick="signOut();">Sign out</a>
 
         </div>
     </nav>
+                        
+    <div id="signin" class="g-signin2" data-onsuccess="onSignIn"></div>
+    <a id="signout" href="#" onclick="signOut">Sign out</a>
 
     <div class="container body-content">
 
