fiddle with loading of scripts

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="icon" type="image/png" href="/static/images/favicon-16x16.png" sizes="16x16" />
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <meta name="google-signin-client_id" content="993445593712-5bvnlkmj9o06d1rq18u0lkd15okrg94g.apps.googleusercontent.com">
+    <script src="main.js" />
 
     <!-- 
     To collect end-user usage analytics about your application, 
@@ -69,7 +70,13 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-    <script src="main.js" />
+
+    <script>
+        $(document).ready(function() {
+            $("signout").click( () => { signOut(); } );
+
+        });
+    </script>
 
 </body>
 </html>
