fix signout hook

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <script>
         $(document).ready(function() {
-            $("signout").click( () => { signOut(); } );
+            $("#signout").click( () => { signOut(); } );
 
         });
     </script>
