More button reorg

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                 </ul>
                 <ul class="navbar-nav navbar-right">
                     <li id="userId" class="dropdown">
-                        <p class="navbar-text navbar-right"></p>    
+                        <a id="signout" href="#" >Sign out</a>
+                        <p class="navbar-text"></p>    
                     </li>
                     <li id="signin" class="g-signin2" data-onsuccess="onSignIn"></li>                    
                 </ul>
@@ -60,7 +61,7 @@
         </div>
     </nav>
                         
-    <a id="signout" href="#" >Sign out</a>
+
 
     <div class="container body-content">
 
