--- a/index.html
+++ b/index.html
@@ -50,8 +50,12 @@
                 </ul>
                 <ul class="navbar-nav navbar-right">
                     <li id="userId" class="dropdown">
-                        <a id="signout" href="#" >Sign out</a>
-                        <p class="navbar-text"></p>    
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></a>
+                        <ul class="dropdown-menu" >
+                            <li>
+                                <a id="signout" href="#" >Sign out</a>
+                            </li>
+                        </ul>    
                     </li>
                     <li id="signin" class="g-signin2" data-onsuccess="onSignIn"></li>                    
                 </ul>
