call render function

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
     <link rel="favicon" href="/static/images/favicon.ico">
     <link rel="icon" type="image/png" href="/static/images/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="/static/images/favicon-16x16.png" sizes="16x16" />
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <meta name="google-signin-client_id" content="993445593712-5bvnlkmj9o06d1rq18u0lkd15okrg94g.apps.googleusercontent.com">
+    
     <script src="main.js" />
+
+    <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
+    <meta name="google-signin-client_id" content="993445593712-5bvnlkmj9o06d1rq18u0lkd15okrg94g.apps.googleusercontent.com">
+
 
     <!-- 
     To collect end-user usage analytics about your application, 
