--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
         </footer>
     </div>
 
+    <script src="googleButtonFormat.js" ></script>
+    
     <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
     
     <script src="main.js" ></script>
