center the button

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
     </nav>
                         
-    <div id="signin" ></div>
+    <div id="signin" class="center-block" ></div>
 
     <div class="container body-content">
 
